<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bettcalc</string>
    <string name="action_settings">Settings</string>
    <string name="profit">--------------</string>
    <string name="winmoney">Выигрышь</string>
    <string name="Stavka2">Ставка №2</string>
    <string name="Stavka1">Ставка №1</string>
    <string name="txtK1">КФ1</string>
    <string name="txtK2">КФ2</string>
    <string name="chet">Посчитать</string>
    <string name="Procent">%</string>
    <color name="Attention">#FF1A00</color>
    <color name="Good">#1A00FF</color>
    <color name="Green">#00FF1A</color>
    <string name="strProfit">Прибыль:</string>
    <string name="strProcentprib">Процент прибыли:</string>
    <string name="txtKf">КФ</string>
    <string name="txtStavka">Ставка</string>
    <string name="txK1">К1</string>
    <string name="txK2">К2</string>
    <string name="Clear">Стереть</string>
    <string name="txtK3">КФ3</string>
    <string name="Stavka3">Ставка №3</string>
    <string name="WinProc1">1. Исход  %</string>
    <string name="profStake">Прибыль исхода</string>
    <string name="WinProc2">2. Исход %</string>
    <string name="WinProc3">3. Исход %</string>
    <string name="win1">1. Выигрышь:</string>
    <string name="txtWinProc">2. Исход %</string>
    <string name="txtWin2">2. Выигрышь:</string>
    <string name="txtWinProc3">3. Исход %</string>
    <string name="txtWin3">3. Выигрышь:</string>
    <string name="chbPereves1">1го</string>
    <string name="chbPereves2">2го</string>
    <string name="txtPereves">Перевес</string>
    <string name="txtProfitN">Прибыль исхода</string>
    <string name="txtOperSumm">Сумма операции:</string>

</resources>

