<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/txtKf"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtStavka"
            android:textStyle="bold|italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvProcent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="right"
            android:hint="@string/WinProc1"
            android:textSize="@dimen/tsize14"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvProfit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/profStake"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtK1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/tsize14" />

        <EditText
            android:id="@+id/etsum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Stavka1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/tsize14" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvProcent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="right"
            android:hint="@string/WinProc2"
            android:textSize="@dimen/tsize14"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvProfit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/profStake"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtK2"
            android:inputType="numberDecimal"
            android:textSize="@dimen/tsize14" />

        <EditText
            android:id="@+id/etsum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/Stavka2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvProcent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="right"
            android:hint="@string/WinProc3"
            android:textSize="@dimen/tsize14"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvProfit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/profStake"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etk3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txtK3"
            android:inputType="numberDecimal"
            android:textSize="@dimen/tsize14" />

        <TextView
            android:id="@+id/tvsum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/Stavka3"
            android:textSize="@dimen/tsize14"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:text="@string/Clear" />

        <Button
            android:id="@+id/btcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chet" />
    </TableRow>

</TableLayout>